# quake-cli

./: .pre-commit-config.yaml  CLAUDE.md  CLI_TEST_IMPROVEMENTS.md  LICENSE  README.md  pixi.toml  pyproject.toml  test_integration_manually.py
.github/workflows/: ci.yml  release.yml  security.yml
docs/: design.md  mkdocs.yml  roadmap.md
docs/content/: examples.md  index.md  installation.md  quickstart.md  testing.md
docs/content/api/: cli.md  client.md  index.md  models.md  result.md
docs/site/: 404.html  index.html  objects.inv  sitemap.xml
docs/site/api/: index.html
docs/site/api/cli/: index.html
docs/site/api/client/: index.html
docs/site/api/models/: index.html
docs/site/api/result/: index.html
docs/site/examples/: index.html
docs/site/installation/: index.html
docs/site/quickstart/: index.html
docs/site/search/: search_index.json
gnet/: __init__.py  __main__.py  client.py  result.py
gnet/cli/: __init__.py  base.py  main.py  output.py  quake.py  volcano.py
gnet/cli/commands/: __init__.py  cap.py  get.py  health.py  history.py  intensity.py  list.py  stats.py  strong_motion.py  volcano_alerts.py  volcano_quakes.py
gnet/models/: __init__.py  cap.py  common.py  feature.py  geometry.py  intensity.py  quake.py  response.py  strong_motion.py  volcano.py
quake_cli/: __init__.py  __main__.py  cli.py  client.py  models.py  result.py
quake_cli/cli/: __init__.py  base.py  main.py  output.py
quake_cli/cli/commands/: get.py  health.py  history.py  list.py  stats.py
quake_cli/models/: __init__.py  properties.py  response.py
scripts/: build-mocks.py  build.py  dev.py  docs.py  quality.py  test.py  utils.py
tests/: conftest.py  test_integration_mocked.py
tests/integration/: __init__.py  conftest.py  test_cli_integration.py  test_client_integration.py  test_geonet_api_integration.py  test_integration.py
tests/mocks/: __init__.py  loader.py
tests/mocks/data/: cap_feed.json  intensity_measured.json  intensity_reported.json  quake_stats.json  quakes_all.json  quakes_mmi4.json  summary.json  volcano_alerts.json
tests/unit/: test_basic.py  test_cli.py  test_cli_complex.py.bak  test_client.py  test_client_complex.py.bak  test_gnet_cli.py  test_models.py  test_new_models.py  test_package_setup.py
